# direct-light

./: .gitattributes  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  CONTRIBUTING.md  HERMES.md  README.en.md  README.md  RENDERING_SPEC.md  ROADMAP.md  V0_10_1_DISPLAY_COPY_SPEC.md  V0_10_I18N_SPEC.md  V0_6B_VISUAL_BRIEF_SPEC.md  V0_6C_GEAR_SPEC.md  V0_6D_OPTICS_SPEC.md  V0_6E_CLOSEOUT_SPEC.md  V0_6_MODIFIER_SPEC.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
docs/history/: COLLABORATION_HISTORY_2026-06-23.md  HERMES_HISTORY_2026-06-23.md  README.md
docs/history/handoffs/: HERMES_HANDOFF_V0_6D.md
docs/history/snapshots/: ARCHITECTURE_FULL_2026-06-29.md  (+3 more)
showcase/: ShowcasePage.tsx  index.html
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: DirectorLightBrief.tsx  ViewBadge.tsx  canvasLayout.ts
src/data/: defaults.ts  personModels.ts
src/domain/: controlGearOptics.ts  lightBrief.ts  lightModifiers.ts  lightingSummary.ts  sceneDiff.ts  supportSurfaces.ts
src/i18n/: display.ts  index.ts  languages.ts  useT.ts
src/lib/: storage.ts
src/models/: 3d_bust_van_darkholmdungeon_master.glb  van_darkholme.glb
src/scene/: LightRig.tsx  Person.tsx  PersonGLB.tsx  StudioScene.tsx
src/site/: ShowcasePage.tsx  main.tsx  showcase.css
src/state/: store.ts  storeTypes.ts
src/ui/: CameraPanel.tsx  CompareControls.tsx  LanguageMenu.tsx  ObjectPanel.tsx  ParamPanel.tsx  PersonPanel.tsx  PresetBar.tsx  StudioPanel.tsx  TopBar.tsx
(+43 files in other folders)
