[package]
name = "direct-light"
version = "0.7.1"
description = "Direct Light — white-studio lighting previz sandbox"
authors = ["Keming Ou"]
license = "MIT"
repository = "https://github.com/oukeming64-tech/direct-light"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
